# FinAlly

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  conftest.py  docker-compose.yml
.claude/: gsd-file-manifest.json  settings.json
.claude-plugin/: marketplace.json
.claude/agents/: change-reviewer.md  gsd-code-fixer.md  gsd-debugger.md  gsd-executor.md  gsd-intel-updater.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-user-profiler.md  gsd-verifier.md
backend/: db.py  llm.py  main.py  market_data_demo.py  pyproject.toml
backend/market/: __init__.py  base.py  factory.py  massive_provider.py  simulator.py  types.py
backend/routes/: chat.py  health.py  portfolio.py  stream.py  watchlist.py
frontend/: package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: chat-panel.tsx  header.tsx  main-chart.tsx  pnl-chart.tsx  portfolio-heatmap.tsx  positions-table.tsx  sparkline.tsx  trade-bar.tsx  watchlist-panel.tsx  workstation.tsx
frontend/hooks/: usePortfolio.ts  usePriceStream.ts  useWatchlist.ts
frontend/lib/: api.ts
planning/: MARKET_DATA_SUMMARY.md  MARKET_SIMULATOR.md  MASSIVE_API.md  PLAN.md  REVIEW.md
scripts/: start_unix.sh  start_windows.ps1  stop_unix.sh  stop_windows.ps1
test/: docker-compose.test.yml  package-lock.json  package.json  playwright.config.ts
tests/: test_db.py  test_factory.py  test_llm.py  test_massive_provider.py  test_routes.py  test_simulator.py
(+146 files in other folders)
